<resources>
    <string name="app_name">HM1</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_plus">+</string>
    <string name="_hashtag">#</string>
    <string name="_phone"></string>
    <string name="_delete">delete</string>
    <string name="speed0Nm">Nm0</string>
    <string name="speed1Nm">Nm1</string>
    <string name="speed2Nm">Nm2</string>
    <string name="speed0Ph">Ph0</string>
    <string name="speed1Ph">Ph1</string>
    <string name="speed2Ph">Ph2</string>
    <string name="_call">call</string>
    <string name="username">username</string>
    <string name="sPhoneNum" />
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
</resources>