<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:backgroundTint="#00C853"
    android:columnCount="3"
    android:orientation="horizontal">

    <Button
        android:id="@+id/numberView"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:backgroundTint="#949795"
        android:clickable="false"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/button_delete"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:backgroundTint="#D50000"
        android:contentDescription="@string/_delete"
        android:src="@android:drawable/ic_input_delete"
        android:text="@string/_delete" />

    <Button
        android:id="@+id/button_speed0"
        android:text="@string/speed1" />

    <Button
        android:id="@+id/button_speed1"
        android:text="@string/speed2" />

    <Button
        android:id="@+id/button_speed2"
        android:text="@string/speed3" />

    <Button
        android:id="@+id/button_1"
        android:text="@string/_1" />

    <Button
        android:id="@+id/button_2"
        android:text="@string/_2" />

    <Button
        android:id="@+id/button_3"
        android:text="@string/_3" />

    <Button
        android:id="@+id/button_4"
        android:text="@string/_4" />

    <Button
        android:id="@+id/button_5"
        android:text="@string/_5" />

    <Button
        android:id="@+id/button_6"
        android:text="@string/_6" />

    <Button
        android:id="@+id/button_7"
        android:text="@string/_7" />

    <Button
        android:id="@+id/button_8"
        android:text="@string/_8" />

    <Button
        android:id="@+id/button_9"
        android:text="@string/_9" />

    <Button
        android:id="@+id/button_plus"
        android:text="@string/_plus" />

    <Button
        android:id="@+id/button_0"
        android:text="@string/_0" />

    <Button
        android:id="@+id/button_hashtag"
        android:text="@string/_hashtag" />

    <ImageButton
        android:id="@+id/button_call"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_gravity="center"
        android:backgroundTint="#00C853"
        android:contentDescription="@string/_call"
        android:src="@android:drawable/stat_sys_phone_call"
        android:text="@string/_call" />

</GridLayout>

